<resources>
    <string name="app_name">经销商管理系统</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>

    <string name="kunnrId">经销商SAP代码:</string>
    <string name="kunnrName">经销商名称,在途运单</string>
    <string name="checkTime">提报时间:</string>
    <string name="skuName">提报品项:</string>
    <string name="quantity">提报数量:</string>
    <string name="subimt">提交</string>
    <string name="find">查询</string>
    <string name="exit">返回</string>
    <string name="podId">运单号:</string>
    <!--登录-->
    <string name="login_username">用户名</string>
    <string name="login_password">密  码</string>
    <string name="login_btn_commit">登  陆</string>
    <string name="login_image_desc">登陆企业logo</string>
    <string name="rememberpass">记住密码</string>
    <string name="login_success">登陆成功</string>
    <string name="login_error_password">密码错误</string>
    <string name="login_error_role">请维护角色</string>
    <string name="login_no_user">用户名不存在</string>
    <string name="login_offline_error_password">离线登陆，密码有误</string>
    <string name="login_offline_loaded">离线登陆成功</string>
    <string name="login_fail">登陆失败</string>
    <string name="login_fail_connect">连接超时</string>
    <string name="login_no_network">网络异常，请检查网络</string>
    <string name="login_no_mobile">请维护公司手机号</string>
    <string name="login_not_business">请用指定手机号登陆</string>
    <string name="home_hi">在途运单</string>

    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>

    <string name="tag1">1</string>
    <string name="tag2">2</string>

    <string name="yes">确认</string>
    <string name="cancel">取消</string>
    <string name="sure_delete">确认删除?</string>
    <string name="confirmation">确认信息  </string>
</resources>
